2003-06-18  William Jon McCann  <mccann@jhu.edu>

	* glines.c: Include string.h.
	Removed remaining background pixmap stuff.

2003-06-17  William Jon McCann  <mccann@jhu.edu>

	* glines.h:
	* glines.c: Fixed compiler warnings.

2003-06-16  William Jon McCann  <mccann@jhu.edu>

	* Makefile.am (EXTRA_DIST): Added schemas.in.

2003-06-13  William Jon McCann  <mccann@jhu.edu>

	* glines.c: Make emacs mode line consistent with others.

2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: i18n fixes from Christian Neumair (bug #114875).

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* glines.c: Use new GamesFrame widget.

	* Makefile.am (INCLUDES): Added libgames-support stuff.

	* glines.c: Removed separator from dialogs as in HIG.

2003-06-08  William Jon McCann  <mccann@jhu.edu>

	* dots.png: Replaced with snazzier images.
	
	* Makefile.am (pixmap_DATA): Added new gumball theme from
	bug #105921.  Don't install unused background pixmaps.

2003-06-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (reset_game): Fixups to remove warnings and to make it
	ANSI C compatible.

2003-06-07  William Jon McCann  <mccann@jhu.edu>

	* glines.c: Use pixbufs for ball images.  Use grid lines instead
	of background pixmaps.  HIG fixes for preferences dialog.

2003-06-06  William Jon McCann  <mccann@jhu.edu>

	* Makefile.am (schema_in_files): 
	* glines.schemas.in: Added gconf schemas.

	* glines.c: Glines now uses gconf.  HIG fixes for pref dialog.

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Implement setgid modifications
	(see gnome-games/ChangeLog). Also undo the score directory
	changes. It breaks more than it fixes.
	
2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-04-30  Abel Cheung  <maddog@linux.org.hk>

	* ChangeLog: Convert to UTF-8.

2002-12-24 John Fleck <jfleck@inkstain.net>
